k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk054-hbm-frontend
  namespace: class-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk054-hbm-frontend
  template:
    metadata:
      labels:
        app: sk054-hbm-frontend
    spec:
      containers:
        - name: hbm-frontend
          image: amdp-registry.skala-ai.com/skala25a/sk054-hbm-frontend:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: sk054-hbm-frontend-svc
  namespace: class-2
spec:
  selector:
    app: sk054-hbm-frontend
  ports:
    - port: 80
      targetPort: 80
